--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
 
 	font-family: 'MyriadPro-Regular';
 	overflow-x: hidden;
-	background: rgba(229,229,229, 1);
+	background-color: #F5F5F7;
 }
 
 @font-face {
@@ -70,8 +70,7 @@ h3{
 
 nav.navbar-default{
 	padding: 10px 10px;
-	background: white;
-	border-color: white;
+	background-color: #FCFCFD;
 }
 
 .home-link{
@@ -84,19 +83,7 @@ nav.navbar-default{
 }
 
 .home-link:hover{
-	color: black;
-}
-
-.navbar-links{
-	font-family: 'MyriadPro-Regular';
-	font-size: 15px;
-	color: rgb(134, 134, 134);
-	text-align: left;
-	margin: auto;
-	transition: background 0.4s, color 0.4s;
-}
-
-.navbar-links:hover{
+	font-family: 'MyriadPro-Bold';
 	color: black;
 }
 
@@ -204,6 +191,44 @@ nav.navbar-default{
 }
 
 
+.btn-custom-sm:hover{
+	color: white;
+}
+
+.medias{
+	width: 25%;
+	margin: auto;
+}
+
+.medias-sm{
+	width: 60%;
+	margin: auto;
+}
+
+.btn-logos{
+	width: 60%;
+	opacity: 0.75;
+	display: inline-block;
+	transition: background 0.4s, color 0.4s;
+}
+
+.btn-logos-sm{
+	width: 60%;
+	opacity: 0.75;
+	margin: 10px;
+	transition: background 0.4s, color 0.4s;
+}
+
+.btn-logos:hover{
+	opacity: 1;
+}
+
+
+.btn-logos-sm:hover{
+	opacity: 1;
+}
+
+
 /*===============================================================================*/
 /* Top shelf */
 
@@ -264,11 +289,25 @@ nav.navbar-default{
 .card {
 	/* background: url('images/card.png'); */
 	/* background-size: 100%; */
-	background-color: white;
+	background-color: #FCFCFD;
 	margin-top: 40px;
 	border-radius: 25px;
 	padding: 20px;
 	padding-bottom: 10px;
+	box-shadow: 1px 1px 1px 1px #00000005;
+	-webkit-box-shadow: 1px 1px 1px 1px #00000005;
+  	-moz-box-shadow: 1px 1px 1px 1px #00000005;
+}
+
+.card-xs {
+	background-color: #FCFCFD;
+	margin-top: 40px;
+	border-radius: 25px;
+	padding: 20px;
+	padding-bottom: 10px;
+	box-shadow: 1px 1px 1px 1px #00000005;
+	-webkit-box-shadow: 1px 1px 1px 1px #00000005;
+  	-moz-box-shadow: 1px 1px 1px 1px #00000005;
 }
 
 .img-projects{
@@ -286,127 +325,81 @@ nav.navbar-default{
 	padding-bottom: 10px;
 }
 
-.btn-link{
-	color: rgb(40, 102, 197);
-	font-family: 'MyriadPro-Regular';
-	text-align: left;
-	font-size: 13px;
-	padding: 0px;
-	margin-bottom: 10px;
-}
-
 .btn-link-md{
 	color: rgb(40, 102, 197);
 	font-family: 'MyriadPro-Regular';
 	text-align: left;
-	font-size: 14px;
+	font-size: 13px;
 	padding: 0px;
 	margin-bottom: 10px;
 }
 
 /*===============================================================================*/
-/* Contato */
+/* Publications */
 
-#contato{
-
+#publications{
 	height: 100%;
-	background: rgb(0,0,0);
 	padding-top: 80px;
-	padding-bottom: 20px; 
+	padding-bottom: 40px; 
 }
 
-.contato-bg{
-
-	background: rgb(64,64,64);
-	margin: 50px -2px;
-}
-
-.titulo-contato{
-
-	color: rgb(240,240,240);
-	text-align: center;
-	font-size: 17px;
-	font-weight: 100;
-	letter-spacing: 1.5px;
-	padding-top: 30px;
+.card-publications{
+	background-color: #FCFCFD;
+	margin: 0px;
+	margin-top: 40px;
+	border-radius: 25px;
+	padding: 0px;
 	padding-bottom: 20px;
+	box-shadow: 1px 1px 1px 1px #00000005;
+	-webkit-box-shadow: 1px 1px 1px 1px #00000005;
+  	-moz-box-shadow: 1px 1px 1px 1px #00000005;
+}
+
+.card-publications-xs{
+	background-color: #FCFCFD;
+	margin: auto;
+	margin-top: 80px;
+	width: 90%;
+	border-radius: 25px;
+	padding: 0px;
+	padding-bottom: 20px;
+	box-shadow: 1px 1px 1px 1px #00000005;
+	-webkit-box-shadow: 1px 1px 1px 1px #00000005;
+  	-moz-box-shadow: 1px 1px 1px 1px #00000005;
+}
+
+.title-publications{
+	font-size: 26px;
+	padding: 20px;
 	text-align: center;
+	color: black;
 }
 
-.contato-normal{
-
-	background: rgb(64,64,64);
-	padding: 10px 30px 10px 30px;
-
-	color: rgb(240,240,240);
-	text-align: left;
-	font-size: 16px;
-	font-weight: 100;
-	letter-spacing: 1.5px;
+.description-publications{
+	font-family: 'MyriadPro-Regular';
+	color: black;
+	text-align: center;
+	font-size: 20px;
+	padding: 20px;
+	padding-top: 0px;
+	margin: auto;
 }
 
-.contato-sm{
-
-	background: rgb(64,64,64);
-	padding: 10px 30px 10px 30px;
-
-	color: rgb(240,240,240);
-	text-align: left;
-	font-size: 10px;
-	font-weight: 100;
-	letter-spacing: 1.5px;
+.img-publications{
+	width: 100%;
+	margin: 0px;
+	border-radius: 25px 25px 0px 0px;
 }
 
-.whats-img{
-
-	width: 17px;
+.link-publications{
+	padding: 20px;
+	text-align: center;
+	color: rgb(40, 102, 197);
+	font-family: 'MyriadPro-Regular';
 }
-
 
 /*===============================================================================*/
-/* Reportagem 1 */
-
-.titulos-rep{
-
-	font-family:'MyriadPro-Cond';
-	font-size: 50px;
-	font-weight: 900;
-	letter-spacing: 0em;
-	text-align: center;
-	color: rgb(255,255,255);
-	
-	padding-bottom: 20px;
-	padding-top: 130px;
-}
-
-.titulos-xs-rep{
-
-	font-family: 'MyriadPro-Cond';
-	font-size: 35px;
-	font-weight: 600;
-	letter-spacing: 0em;
-	text-align: center;
-	color: rgb(255,255,255);
-
-	padding-bottom: 20px;
-	padding-top: 130px;
-}
-
-.texto-rep-1{
-
-	color: rgb(240,240,240);
-	text-align: left;
-	font-size: 13px;
-	font-weight: 100;
-	letter-spacing: 1.5px;
-	padding-top: 40px;
-	padding-bottom: 20px;
-	padding-left: 15px;
-}
-
-
-/*===============================================================================*/
-/* Rodapé */
+/* Footer */
 
 footer{
 	border-top: 2px;
